# cashoptimizer

./: DOCUMENTATION.md  LICENSE  README.md  ZENSICAL_SETUP_SUMMARY.md  build-docs.bat  build-docs.sh  docs-requirements.txt  pyproject.toml  zensical.yaml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: .gitignore  README.md
docs/source/: getting-started.md  index.md
docs/source/api/: reference.md
docs/source/guides/: cli.md  governance.md  gui.md  python-api.md
examples/: benchmark_history_report.py  benchmark_suite.py  ci_benchmark_guardrail.py  export_simulation_outputs.py  run_proj_csv.py
outputs/: sim_defaults_lineup_stats.csv  sim_defaults_player_stats.csv  sim_defaults_summary.csv
research/: paper.txt  paper2.txt  paper3.txt
specs/: cash_optimizer_spec.md  cli_spec.md  governance_policy.json  gui_spec.md  spec_implementation_tracker.md
src/cash_optimizer/: __init__.py  baselines.py  calibration.py  cash_metrics.py  defaults.py  edge_trend.py  io.py  models.py  objective_selection.py  optimizer.py  performance.py  prediction_eval.py  projections.py  robust.py  sampling.py  selection.py  sensitivity.py  stress.py
src/cash_optimizer_cli/: context.py  exporters.py  formatters.py  main.py  projection_overrides.py  validators.py
src/cash_optimizer_gui/: app.py  main_window.py
tests/: proj.csv  proj2.csv  test_advanced.py  test_baselines.py  test_calibration_governance.py  test_cli_smoke.py  test_edge_trend.py  test_gui_import.py  test_gui_qt.py  test_prediction_eval.py  test_proj_csv.py  test_robust.py  test_smoke.py
(+6 files in other folders)
